syntax = "proto3";
package pb;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "github.com/lyft/protoc-gen-validate/validate/validate.proto";

service VisitService {
    // Simple return the visit id
    rpc Get(ID) returns (Visit) {
        option (google.api.http) = {
          get: "/v1/visit/{id}"
        };
    }
    // Update/Create a device
    rpc Set(Visit) returns (Visit) {}
}

message ID {
    int32 id = 1 [(validate.rules).int32.gte = 2];
};

message Visit {
    int32 id = 1 [(validate.rules).int32.gte = 2];
    string first_name = 2 [(validate.rules).string.min_len = 2];
    google.protobuf.Timestamp created_at = 3;
}