syntax = "proto3";
package pb;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "src/transport/grpc/proto/generics.proto";

service Visit {
    // Simple return the visit id
    rpc Get(ID) returns (VisitResponse) {
        option (google.api.http) = {
          get: "/v1/visit/{ID}"
        };
    }
    // Update/Create a device
    rpc Set(VisitRequest) returns (VisitResponse) {
        option (google.api.http) = {
          post: "/v1/visit"
          body: "*"
          additional_bindings {
            put: "/v1/visit"
            body: "*"
          }
        };
    }
}

message VisitRequest {
    uint32 ID = 1 [(validate.rules).uint32.gte = 0];
    string FirstName = 2 [(validate.rules).string.min_len = 2];
    string LastName = 3 [(validate.rules).string.min_len = 2];
};

message VisitResponse {
    uint32 ID = 1;
    string FirstName = 2;
    string LastName = 3;
    google.protobuf.Timestamp CreatedAt = 4;
    google.protobuf.Timestamp UpdatedAt = 5;
};